// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderAllConfigs — G1 branch-office (dual HSRP) > matches the recorded snapshot for every cisco-ios device 1`] = `
{
  "fw-01": "# Base configuration generated by NetDesign.app — validate in a lab before production.
config system global
    set hostname "fw-01"
end
config system interface
    edit "port1"
        set alias "wan-uplink"
        set mode dhcp
    next
    edit "port2"
        set alias "Firewall uplink to rtr-01"
        set mode static
        set ip 10.30.1.4 255.255.255.254
        set allowaccess ping
    next
    edit "port3"
        set alias "Firewall uplink to rtr-02"
        set mode static
        set ip 10.30.1.6 255.255.255.254
        set allowaccess ping
    next
end
config router static
    edit 1
        set dst 10.30.2.0 255.255.255.0
        set gateway 10.30.1.5
        set device "port2"
    next
    edit 2
        set dst 10.30.2.0 255.255.255.0
        set gateway 10.30.1.7
        set device "port3"
    next
    edit 3
        set dst 10.30.3.0 255.255.255.0
        set gateway 10.30.1.5
        set device "port2"
    next
    edit 4
        set dst 10.30.3.0 255.255.255.0
        set gateway 10.30.1.7
        set device "port3"
    next
    edit 5
        set dst 10.30.4.0 255.255.255.0
        set gateway 10.30.1.5
        set device "port2"
    next
    edit 6
        set dst 10.30.4.0 255.255.255.0
        set gateway 10.30.1.7
        set device "port3"
    next
end
",
  "rtr-01": "! Base configuration generated by NetDesign.app — validate in a lab before production.
!
hostname rtr-01
!
interface GigabitEthernet0/0
 description Firewall uplink to fw-01
 ip address 10.30.1.5 255.255.255.254
 no shutdown
!
interface GigabitEthernet0/1
 description Access trunk to sw-01
 no ip address
 no shutdown
!
interface GigabitEthernet0/1.10
 encapsulation dot1Q 10
 ip address 10.30.2.2 255.255.255.0
 standby 10 ip 10.30.2.1
 standby 10 priority 110
 standby 10 preempt
!
interface GigabitEthernet0/1.20
 encapsulation dot1Q 20
 ip address 10.30.3.2 255.255.255.0
 standby 20 ip 10.30.3.1
 standby 20 priority 110
 standby 20 preempt
!
interface GigabitEthernet0/1.30
 encapsulation dot1Q 30
 ip address 10.30.4.2 255.255.255.0
 standby 30 ip 10.30.4.1
 standby 30 priority 110
 standby 30 preempt
!
ip route 0.0.0.0 0.0.0.0 10.30.1.4
!
end
",
  "rtr-02": "! Base configuration generated by NetDesign.app — validate in a lab before production.
!
hostname rtr-02
!
interface GigabitEthernet0/0
 description Firewall uplink to fw-01
 ip address 10.30.1.7 255.255.255.254
 no shutdown
!
interface GigabitEthernet0/1
 description Access trunk to sw-02
 no ip address
 no shutdown
!
interface GigabitEthernet0/1.10
 encapsulation dot1Q 10
 ip address 10.30.2.3 255.255.255.0
 standby 10 ip 10.30.2.1
 standby 10 priority 100
 standby 10 preempt
!
interface GigabitEthernet0/1.20
 encapsulation dot1Q 20
 ip address 10.30.3.3 255.255.255.0
 standby 20 ip 10.30.3.1
 standby 20 priority 100
 standby 20 preempt
!
interface GigabitEthernet0/1.30
 encapsulation dot1Q 30
 ip address 10.30.4.3 255.255.255.0
 standby 30 ip 10.30.4.1
 standby 30 priority 100
 standby 30 preempt
!
ip route 0.0.0.0 0.0.0.0 10.30.1.6
!
end
",
  "sw-01": "! Base configuration generated by NetDesign.app — validate in a lab before production.
!
hostname sw-01
!
vlan 10
 name corp-data
!
vlan 20
 name voice
!
vlan 30
 name guest
!
interface GigabitEthernet0/0
 description Access trunk to rtr-01
 switchport trunk encapsulation dot1q
 switchport mode trunk
 switchport trunk allowed vlan 10,20,30
 no shutdown
!
interface GigabitEthernet0/1
 description Switch interlink to sw-02
 switchport trunk encapsulation dot1q
 switchport mode trunk
 switchport trunk allowed vlan 10,20,30
 no shutdown
!
end
",
  "sw-02": "! Base configuration generated by NetDesign.app — validate in a lab before production.
!
hostname sw-02
!
vlan 10
 name corp-data
!
vlan 20
 name voice
!
vlan 30
 name guest
!
interface GigabitEthernet0/0
 description Access trunk to rtr-02
 switchport trunk encapsulation dot1q
 switchport mode trunk
 switchport trunk allowed vlan 10,20,30
 no shutdown
!
interface GigabitEthernet0/1
 description Switch interlink to sw-01
 switchport trunk encapsulation dot1q
 switchport mode trunk
 switchport trunk allowed vlan 10,20,30
 no shutdown
!
end
",
}
`;

exports[`renderAllConfigs — G4 smb-flat (single router, no redundancy) > matches the recorded snapshot 1`] = `
{
  "fw-01": "# Base configuration generated by NetDesign.app — validate in a lab before production.
config system global
    set hostname "fw-01"
end
config system interface
    edit "port1"
        set alias "wan-uplink"
        set mode dhcp
    next
    edit "port2"
        set alias "Firewall uplink to rtr-01"
        set mode static
        set ip 10.40.1.2 255.255.255.254
        set allowaccess ping
    next
end
config router static
    edit 1
        set dst 10.40.2.0 255.255.255.0
        set gateway 10.40.1.3
        set device "port2"
    next
    edit 2
        set dst 10.40.3.0 255.255.255.0
        set gateway 10.40.1.3
        set device "port2"
    next
end
",
  "rtr-01": "! Base configuration generated by NetDesign.app — validate in a lab before production.
!
hostname rtr-01
!
interface GigabitEthernet0/0
 description Firewall uplink to fw-01
 ip address 10.40.1.3 255.255.255.254
 no shutdown
!
interface GigabitEthernet0/1
 description Access trunk to sw-01
 no ip address
 no shutdown
!
interface GigabitEthernet0/1.10
 encapsulation dot1Q 10
 ip address 10.40.2.1 255.255.255.0
!
interface GigabitEthernet0/1.20
 encapsulation dot1Q 20
 ip address 10.40.3.1 255.255.255.0
!
ip route 0.0.0.0 0.0.0.0 10.40.1.2
!
end
",
  "sw-01": "! Base configuration generated by NetDesign.app — validate in a lab before production.
!
hostname sw-01
!
vlan 10
 name corp
!
vlan 20
 name guest
!
interface GigabitEthernet0/0
 description Access trunk to rtr-01
 switchport trunk encapsulation dot1q
 switchport mode trunk
 switchport trunk allowed vlan 10,20
 no shutdown
!
end
",
}
`;
